Fix mobile status key: allow text wrapping

--- a/assets/partials/_status-key.scss
+++ b/assets/partials/_status-key.scss
@@ -26,6 +26,11 @@
     white-space: nowrap;
     color: $text--muted;
 
+    @include sm {
+      white-space: normal;
+      width: 100%;
+    }
+
     &--closed .status-key__label {
       color: $color--danger;
       font-weight: $weight--bold;
